Cambio Ortografico en "Registro de Tecnicos" a "Registro de Técnicos"

--- a/Registro/Components/Pages/TecnicoPages/Index.razor
+++ b/Registro/Components/Pages/TecnicoPages/Index.razor
@@ -7,7 +7,7 @@
 	<div class="card shadow-lg">
 		@*header*@
 		<div class="card-header">
-			<div class="card-title"><h5>Registro de Tecnicos</h5></div>
+			<div class="card-title"><h5>Registro de T&eacute;cnicos</h5></div>
 		</div>
 		@*body*@
 		<div class="card-body">
