--- a/Registro/Components/Pages/TecnicoPages/Create.razor
+++ b/Registro/Components/Pages/TecnicoPages/Create.razor
@@ -3,7 +3,7 @@
 @inject NavigationManager navigate
 @rendermode InteractiveServer
 
-<PageTitle>Create</PageTitle>
+<PageTitle>Crear</PageTitle>
 <EditForm Model="tecnico" OnValidSubmit="Guardar">
 	<div class="container">
 		<div class="card shadow-lg">
