--- a/Registro/Components/Pages/TecnicoPages/Delete.razor
+++ b/Registro/Components/Pages/TecnicoPages/Delete.razor
@@ -15,7 +15,7 @@
 			<ul>
 				<li><strong>Id: </strong><strong>@tecnicos.TecnicoId</strong></li>
 				<li><strong>Nombres: </strong><strong>@tecnicos.Nombres</strong></li>
-				<li><strong>Sueldo por hora: </strong><strong>@tecnicos.SueldoHora</strong></li>
+				<li><strong>Sueldo por hora: </strong><strong>$@tecnicos.SueldoHora.ToString("N2")</strong></li>
 			</ul>
 		</div>
 		@*footer*@
@@ -34,6 +34,7 @@
 	public async Task Eliminar()
 	{
 		var eliminar = await tecnicosService.Eliminar(TecnicoId);
+		navigate.NavigateTo("/Tecnico/Index");
 	}
 
 	protected override async Task OnInitializedAsync()
