--- a/Registro/Components/Pages/TecnicoPages/Details.razor
+++ b/Registro/Components/Pages/TecnicoPages/Details.razor
@@ -14,7 +14,7 @@
 			<ul>
 				<li><strong>Id: </strong><strong>@tecnicos.TecnicoId</strong></li>
 				<li><strong>Nombres: </strong><strong>@tecnicos.Nombres</strong></li>
-				<li><strong>Sueldo por hora: </strong><strong>@tecnicos.SueldoHora</strong></li>
+				<li><strong>Sueldo por hora: </strong><strong>$@tecnicos.SueldoHora.ToString("N2")</strong></li>
 			</ul>
 		</div>
 	</div>
