--- a/Registro/Components/Pages/TecnicoPages/Edit.razor
+++ b/Registro/Components/Pages/TecnicoPages/Edit.razor
@@ -28,6 +28,9 @@
 						<ValidationMessage For="(()=> tecnico.SueldoHora)" />
 					</div>
 				</div>
+				<div class="col-3 ms-5">
+					<h6>@Alerta</h6>
+				</div>
 			</div>
 			@*footer*@
 			<div class="card-footer text-center">
@@ -43,6 +46,7 @@
 	[Parameter]
 	public int TecnicoId { get; set; }
 	public Tecnicos tecnico { get; set; } = new Tecnicos();
+	public string Alerta { get; set; }
 
 	protected override async Task OnInitializedAsync()
 	{
@@ -51,7 +55,18 @@
 
 	public async Task Guardar()
 	{
+		if (await Existe())
+		{
+			Alerta = "Ya existe un usuario con este nombre.";
+			return;
+		}
 		var guardar = await tecnicosService.Guardar(tecnico);
 		navigate.NavigateTo("/Tecnico/Index");
+	}
+
+	public async Task<bool> Existe()
+	{
+		var existe = await tecnicosService.ExisteTecnico(tecnico.Nombres, tecnico.TecnicoId);
+		return existe;
 	}
 }
