Errores del index arreglados.

--- a/Registro/Components/Pages/ClientePages/Index.razor
+++ b/Registro/Components/Pages/ClientePages/Index.razor
@@ -29,7 +29,6 @@
 						<option value="" selected disabled>Elija una opci&oacute;n</option>
 						<option value="Id">Id</option>
 						<option value="Nombre">Nombre</option>
-						<option value="SueldoHora">SueldoHora</option>
 					</InputSelect>
 				</div>
 				@*Buscar*@
@@ -45,7 +44,7 @@
 				</div>
 				@*Crear*@
 				<div class="col text-end">
-					<a href="/Tecnico/Crear" class="text-end btn btn-outline-primary">Crear</a>
+					<a href="/Cliente/Crear" class="text-end btn btn-outline-primary">Crear</a>
 				</div>
 			</div>
 		</div>
