--- a/Registro/Components/Layout/NavMenu.razor
+++ b/Registro/Components/Layout/NavMenu.razor
@@ -13,6 +13,12 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Tecnicos
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Cliente/Index">
+                <span class="bi bi-person" style="font-size: 32px;" aria-hidden="true"></span> Clientes
+            </NavLink>
+        </div>
     </nav>
 </div>
 
