--- a/Registro/Components/Pages/ClientePages/Index.razor
+++ b/Registro/Components/Pages/ClientePages/Index.razor
@@ -35,16 +35,16 @@
 				<div class="col-4">
 					<div class="input-group">
 						<input class="form-control" @bind="ValorFiltro" placeholder="Buscar" />
-						<button type="button" class="btn btn-outline-primary" @onclick="Buscar">Buscar</button>
+						<button type="button" class="bi bi-search btn btn-outline-primary" @onclick="Buscar">Buscar</button>
 					</div>
 				</div>
 				@*Restablecer*@
 				<div class="col-auto">
-					<button type="button" class="btn btn-outline-secondary" @onclick="Restablecer">Nuevo</button>
+					<button type="button" class="bi bi-arrow-counterclockwise btn btn-outline-secondary" @onclick="Restablecer">Nuevo</button>
 				</div>
 				@*Crear*@
 				<div class="col text-end">
-					<a href="/Cliente/Crear" class="text-end btn btn-outline-primary">Crear</a>
+					<a href="/Cliente/Crear" class="bi bi-plus-square btn btn-outline-primary">Crear</a>
 				</div>
 			</div>
 		</div>
@@ -72,8 +72,8 @@
 						<td>$ @clientes.LimiteCredito.ToString("N2")</td>
 						<td>@clientes.Tecnicos.Nombres</td>
 						<td>@clientes.FechaIngreso</td>
-						<td><a href="/Cliente/Editar/@clientes.ClienteId" class="btn btn-outline-warning">Editar</a></td>
-						<td><a href="/Cliente/Eliminar/@clientes.ClienteId" class="btn btn-outline-danger">Eliminar</a></td>
+						<td><a href="/Cliente/Editar/@clientes.ClienteId" class="bi bi-pencil-square btn btn-outline-warning"></a></td>
+						<td><a href="/Cliente/Eliminar/@clientes.ClienteId" class="bi bi-trash btn btn-outline-danger"></a></td>
 					</tr>
 				}
 			</tbody>
