--- a/Registro/Components/Pages/ClientePages/Create.razor
+++ b/Registro/Components/Pages/ClientePages/Create.razor
@@ -11,7 +11,7 @@
 		<div class="card shadow-lg">
 			@*header*@
 			<div class="card-header">
-				<div class="card-title">Crear T&eacutecnico</div>
+				<div class="card-title">Crear Cliente</div>
 			</div>
 			@*body*@
 			<div class="card-body">
@@ -31,26 +31,27 @@
 					</div>
 					
 					<div class="col-3 ms-5">
-						@*Direccion*@
+						@*RNC*@
 						<label class="form-label"><strong>RNC</strong></label>
 						<InputText class="form-control" @bind-value="cliente.Rnc"></InputText>
 						<ValidationMessage For="(()=> cliente.Rnc)" />
 					</div>
 
 					<div class="col-3 ms-5">
-						@*Direccion*@
+						@*Credito*@
 						<label class="form-label"><strong>Limite de Credito</strong></label>
 						<InputNumber class="form-control" @bind-value="cliente.LimiteCredito"></InputNumber>
 						<ValidationMessage For="(()=> cliente.LimiteCredito)" />
 					</div>
 
 					<div class="col-3 ms-5">
-						@*Direccion*@
+						@*Fecha*@
 						<label class="form-label"><strong>Fecha de ingreso</strong></label>
 						<InputDate class="form-control" @bind-value="cliente.FechaIngreso"></InputDate>
 						<ValidationMessage For="(()=> cliente.FechaIngreso)" />
 					</div>
 
+					@*Tecnico*@
 					<div class="col-3 ms-5">
 						<label class="form-label text-naranja"><strong>Tipo</strong></label>
 						<InputSelect class="form-select" @bind-Value="cliente.TecnicoId">
@@ -69,8 +70,8 @@
 			</div>
 			@*footer*@
 			<div class="card-footer text-center">
-				<a href="/Cliente/Index" class="btn btn-outline-primary">Volver</a>
-				<button type="submit" class="btn btn-outline-success">Guardar</button>
+				<a href="/Cliente/Index" class="bi bi-arrow-return-left btn btn-outline-primary">Volver</a>
+				<button type="submit" class="bi bi-floppy btn btn-outline-success">Guardar</button>
 			</div>
 		</div>
 	</div>
@@ -91,7 +92,7 @@
 	{
 		if (await Existe())
 		{
-			Alerta = "Ya existe un usuario con este nombre.";
+			Alerta = "Ya existe un usuario con este nombre o RNC.";
 			return;
 		}
 		var guardar = await clienteService.Guardar(cliente);
