--- a/Registro/Components/Pages/TecnicoPages/Create.razor
+++ b/Registro/Components/Pages/TecnicoPages/Create.razor
@@ -34,8 +34,8 @@
 			</div>
 			@*footer*@
 			<div class="card-footer text-center">
-				<a href="/Tecnico/Index" class="btn btn-outline-primary">Volver</a>
-				<button type="submit" class="btn btn-outline-success">Guardar</button>
+				<a href="/Tecnico/Index" class="bi bi-arrow-return-left btn btn-outline-primary">Volver</a>
+				<button type="submit" class="bi bi-floppy btn btn-outline-success">Guardar</button>
 			</div>
 		</div>
 	</div>
