--- a/Registro/Components/Pages/CiudadPages/Index.razor
+++ b/Registro/Components/Pages/CiudadPages/Index.razor
@@ -1,5 +1,104 @@
-﻿
+﻿@page "/Ciudad/Index"
+@inject CiudadService ciudadService
+@rendermode InteractiveServer
+
+<PageTitle>Cliente Index</PageTitle>
+<div class="container">
+	<div class="card shadow-lg">
+		@*header*@
+		<div class="card-header">
+			<div class="card-title"><h5>Registro de Ciudades</h5></div>
+		</div>
+		@*body*@
+		<div class="card-body">
+			<div class="row">
+				@*Filtrar por*@
+				<div class="col-3">
+					<label class="form-label"><strong>Filtrar Por</strong></label>
+				</div>
+				@*ValorFiltro*@
+				<div class="col-4">
+					<label class="form-label"><strong>Busqueda</strong></label>
+				</div>
+			</div>
+			@*Inputs y Botones*@
+			<div class="row">
+				@*Filtro*@
+				<div class="col-3">
+					<InputSelect class="form-select" @bind-Value="Filtro">
+						<option value="" selected disabled>Elija una opci&oacute;n</option>
+						<option value="Id">Id</option>
+						<option value="Nombre">ciudad</option>
+					</InputSelect>
+				</div>
+				@*Buscar*@
+				<div class="col-4">
+					<div class="input-group">
+						<input class="form-control" @bind="ValorFiltro" placeholder="Buscar" />
+						<button type="button" class="bi bi-search btn btn-outline-primary" @onclick="Buscar">Buscar</button>
+					</div>
+				</div>
+				@*Restablecer*@
+				<div class="col-auto">
+					<button type="button" class="bi bi-arrow-counterclockwise btn btn-outline-secondary" @onclick="Restablecer">Nuevo</button>
+				</div>
+				@*Crear*@
+				<div class="col text-end">
+					<a href="/Ciudad/Crear" class="bi bi-plus-square btn btn-outline-primary">Crear</a>
+				</div>
+			</div>
+		</div>
+		<table class="table table-bordered">
+			<thead>
+				<tr>
+					<th>Id</th>
+					<th>Ciudad</th>
+				</tr>
+			</thead>
+
+			<tbody>
+				@foreach (var ciudad in ListaCiudad)
+				{
+					<tr>
+						<td>@ciudad.CiudadId</td>
+						<td>@ciudad.Nombre</td>
+						<td><a href="/Ciudad/Editar/@ciudad.CiudadId" class="bi bi-pencil-square btn btn-outline-warning"></a></td>
+						<td><a href="/Ciudad/Eliminar/@ciudad.CiudadId" class="bi bi-trash btn btn-outline-danger"></a></td>
+					</tr>
+				}
+			</tbody>
+		</table>
+	</div>
+</div>
 
 @code {
+	public List<Ciudades> ListaCiudad { get; set; } = new List<Ciudades>();
+	public string Filtro { get; set; } = string.Empty;
+	public string ValorFiltro { get; set; } = string.Empty;
 
+	protected override async Task OnInitializedAsync()
+	{
+		ListaCiudad = await ciudadService.Listar(o => o.CiudadId > 0);
+	}
+
+	private async Task Buscar()
+	{
+		if (ValorFiltro.Trim() != "")
+		{
+			if (Filtro == "Id" && int.TryParse(ValorFiltro, out int tecnicoId))
+				ListaCiudad = await ciudadService.Listar(t => t.CiudadId == tecnicoId);
+			else if (Filtro == "Nombre")
+				ListaCiudad = await ciudadService.Listar(t => t.Nombre.ToLower().Contains(ValorFiltro.ToLower()));
+
+		}
+		else
+			ListaCiudad = await ciudadService.Listar(t => t.CiudadId > 0);
+	}
+
+	private async Task Restablecer()
+	{
+		ListaCiudad = await ciudadService.Listar(t => t.CiudadId > 0);
+		Filtro = string.Empty;
+		ValorFiltro = string.Empty;
+	}
 }
