--- a/Registro/Components/Layout/NavMenu.razor
+++ b/Registro/Components/Layout/NavMenu.razor
@@ -19,6 +19,12 @@
                 <span class="bi bi-person" style="font-size: 32px;" aria-hidden="true"></span> Clientes
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Ciudad/Index">
+                <span class="bi bi-person" style="font-size: 32px;" aria-hidden="true"></span> Ciudades
+            </NavLink>
+        </div>
     </nav>
 </div>
 
