--- a/Registro/Components/Pages/CiudadPages/Delete.razor
+++ b/Registro/Components/Pages/CiudadPages/Delete.razor
@@ -12,7 +12,7 @@
 		</div>
 		@*body*@
 		<div class="card-body">
-			<a href="/Tecnico/Index" class="btn btn-outline-primary">Volver</a>
+			<a href="/Ciudad/Index" class="btn btn-outline-primary">Volver</a>
 			<button type="button" class="btn btn-outline-danger" @onclick="Eliminar">Eliminar</button>
 		</div>
 	</div>
