Se arreglo el boton "volver" de delete de clientes.

--- a/Registro/Components/Pages/ClientePages/Delete.razor
+++ b/Registro/Components/Pages/ClientePages/Delete.razor
@@ -13,7 +13,7 @@
 		</div>
 		@*body*@
 		<div class="card-body">
-			<a href="/Tecnico/Index" class="btn btn-outline-primary">Volver</a>
+			<a href="/Cliente/Index" class="btn btn-outline-primary">Volver</a>
 			<button type="button" class="btn btn-outline-danger" @onclick="Eliminar">Eliminar</button>
 		</div>
 	</div>
