Los Nombres de los Servicios Fueron Cambiados a plural #2

--- a/Registro/Components/Pages/CiudadPages/Edit.razor
+++ b/Registro/Components/Pages/CiudadPages/Edit.razor
@@ -1,5 +1,5 @@
 ﻿@page "/Ciudad/Edit/{CiudadId:int}"
-@inject CiudadService ciudadService
+@inject CiudadesService ciudadService
 @inject NavigationManager navigate
 @rendermode InteractiveServer
 
