--- a/Registro/Components/Pages/CiudadPages/Index.razor
+++ b/Registro/Components/Pages/CiudadPages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/Ciudad/Index"
-@inject CiudadService ciudadService
+@inject CiudadesService ciudadService
 @rendermode InteractiveServer
 
 <PageTitle>Cliente Index</PageTitle>
