--- a/Registro/Components/Pages/ClientePages/Create.razor
+++ b/Registro/Components/Pages/ClientePages/Create.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Cliente/Crear"
-@inject ClienteService clienteService
-@inject TecnicoService tecnicosService
-@inject CiudadService ciudadService
+@inject ClientesService clienteService
+@inject TecnicosService tecnicosService
+@inject CiudadesService ciudadService
 @inject NavigationManager navigate
 @rendermode InteractiveServer
 
