--- a/Registro/Components/Pages/ClientePages/Delete.razor
+++ b/Registro/Components/Pages/ClientePages/Delete.razor
@@ -1,6 +1,6 @@
 ﻿@page "/Cliente/Eliminar/{ClienteId:int}"
-@inject ClienteService clienteService
-@inject TecnicoService tecnicoService
+@inject ClientesService clienteService
+@inject TecnicosService tecnicoService
 @inject NavigationManager navigate
 @rendermode InteractiveServer
 
