--- a/Registro/Components/Pages/ClientePages/Index.razor
+++ b/Registro/Components/Pages/ClientePages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/Cliente/Index"
-@inject ClienteService clienteService
+@inject ClientesService clienteService
 @rendermode InteractiveServer
 
 <PageTitle>Cliente Index</PageTitle>
