--- a/Registro/Components/Pages/TecnicoPages/Delete.razor
+++ b/Registro/Components/Pages/TecnicoPages/Delete.razor
@@ -1,5 +1,5 @@
 ﻿@page "/Tecnico/Eliminar/{TecnicoId:int}"
-@inject TecnicoService tecnicosService
+@inject TecnicosService tecnicosService
 @inject NavigationManager navigate
 @rendermode InteractiveServer
 
