--- a/Registro/Components/Pages/CiudadPages/Create.razor
+++ b/Registro/Components/Pages/CiudadPages/Create.razor
@@ -1,5 +1,5 @@
 ﻿@page "/Ciudad/Crear"
-@inject CiudadService ciudadService
+@inject CiudadesService ciudadService
 @inject NavigationManager navigate
 @rendermode InteractiveServer
 
