--- a/Registro/Components/Pages/CiudadPages/Delete.razor
+++ b/Registro/Components/Pages/CiudadPages/Delete.razor
@@ -1,5 +1,5 @@
 ﻿@page "/Ciudad/Eliminar/{CiudadId:int}"
-@inject CiudadService ciudadService
+@inject CiudadesService ciudadService
 @inject NavigationManager navigate
 @rendermode InteractiveServer
 
