--- a/Registro/Components/Pages/TecnicoPages/Create.razor
+++ b/Registro/Components/Pages/TecnicoPages/Create.razor
@@ -1,5 +1,5 @@
 ﻿@page "/Tecnico/Crear"
-@inject TecnicoService tecnicosService
+@inject TecnicosService tecnicosService
 @inject NavigationManager navigate
 @rendermode InteractiveServer
 
