--- a/Registro/Components/Pages/TecnicoPages/Details.razor
+++ b/Registro/Components/Pages/TecnicoPages/Details.razor
@@ -1,5 +1,5 @@
 ﻿@page "/Tecnico/Ver/{TecnicoId:int}"
-@inject TecnicoService tecnicosService
+@inject TecnicosService tecnicosService
 @inject NavigationManager navigate
 @rendermode InteractiveServer
 
