--- a/Registro/Components/Pages/TecnicoPages/Index.razor
+++ b/Registro/Components/Pages/TecnicoPages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/Tecnico/Index"
-@inject TecnicoService tecnicosService
+@inject TecnicosService tecnicosService
 @rendermode InteractiveServer
 
 <PageTitle>Index</PageTitle>
