Falta Ortografica Arreglada #5

--- a/Registro/Components/Pages/TecnicoPages/Delete.razor
+++ b/Registro/Components/Pages/TecnicoPages/Delete.razor
@@ -8,7 +8,7 @@
 	<div class="shadow-lg">
 		@*header*@
 		<div class="card-header">
-			<div class="card-title"><h5>Estas Seguro que quieres eliminar este T&eacute;cnico?</h5></div>
+			<div class="card-title"><h5>Estás seguro de que quieres eliminar al T&eacute;cnico @tecnicos.Nombres?</h5></div>
 		</div>
 		@*body*@
 		<div class="card-body">
