--- a/Registro/Components/Pages/CiudadPages/Delete.razor
+++ b/Registro/Components/Pages/CiudadPages/Delete.razor
@@ -8,7 +8,7 @@
 	<div class="shadow-lg">
 		@*header*@
 		<div class="card-header">
-			<div class="card-title"><h5>Estas Seguro que quieres eliminar la ciudad @ciudades.Nombre?</h5></div>
+			<div class="card-title"><h5>¿Estás seguro de que quieres eliminar la ciudad @ciudades.Nombre?</h5></div>
 		</div>
 		@*body*@
 		<div class="card-body">
