--- a/Registro/Components/Pages/ClientePages/Delete.razor
+++ b/Registro/Components/Pages/ClientePages/Delete.razor
@@ -9,7 +9,7 @@
 	<div class="shadow-lg">
 		@*header*@
 		<div class="card-header">
-			<div class="card-title"><h5>Estas Seguro que quieres eliminar el Cliente @clientes.Nombres?</h5></div>
+			<div class="card-title"><h5>Estás seguro de que quieres eliminar al cliente @clientes.Nombres?</h5></div>
 		</div>
 		@*body*@
 		<div class="card-body">
