Cambios de sintaxis.

--- a/Registro/Components/Pages/ClientePages/Create.razor
+++ b/Registro/Components/Pages/ClientePages/Create.razor
@@ -27,7 +27,7 @@
 
 					<div class="col-3" ms-5>
 						@*Ciudad*@
-						<label class="form-label"><Strong>Ciudad</Strong></label>
+						<label class="form-label"><strong>Ciudad</strong></label>
 						<InputSelect class="form-select" @bind-Value="cliente.CiudadId">
 							<option value="0">Seleccion una ciudad</option>
 							@foreach(var ciudad in ListaCiudades)
