--- a/Registro/Components/Pages/ClientePages/Index.razor
+++ b/Registro/Components/Pages/ClientePages/Index.razor
@@ -66,7 +66,7 @@
 				@foreach (var clientes in ListaClientes)
 				{
 					<tr>
-						<td>@clientes.TecnicoId</td>
+						<td>@clientes.ClienteId</td>
 						<td>@clientes.Rnc</td>
 						<td>@clientes.Nombres</td>
 						<td>@clientes.Ciudades.Nombre</td>
