--- a/Registro/Components/Layout/NavMenu.razor
+++ b/Registro/Components/Layout/NavMenu.razor
@@ -9,26 +9,26 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="nav flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/Tecnico/Index" Match="NavLinkMatch.All">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Tecnicos
+            <NavLink class="nav-link" href="/Tecnico/Index">
+                <span class="bi bi-wrench-adjustable" style="font-size: 26px;" aria-hidden="true"></span> Tecnicos
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Cliente/Index">
-                <span class="bi bi-person" style="font-size: 32px;" aria-hidden="true"></span> Clientes
+                <span class="bi bi-person" style="font-size: 30px;" aria-hidden="true"></span> Clientes
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Ciudad/Index">
-                <span class="bi bi-person" style="font-size: 32px;" aria-hidden="true"></span> Ciudades
+                <span class="bi bi-geo-alt-fill" style="font-size: 30px;" aria-hidden="true"></span> Ciudades
             </NavLink>
         </div> 
         
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Ticket/Index">
-                <span class="bi bi-person" style="font-size: 32px;" aria-hidden="true"></span> Ciudades
+                <span class="bi bi-ticket nav-menu" style="font-size: 30px;" aria-hidden="true"></span> Ticket
             </NavLink>
         </div>
     </nav>
