--- a/Registro/Components/Layout/NavMenu.razor
+++ b/Registro/Components/Layout/NavMenu.razor
@@ -31,6 +31,11 @@
                 <span class="bi bi-ticket nav-menu" style="font-size: 30px;" aria-hidden="true"></span> Ticket
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Sistema/Index">
+                <span class="bi bi-cpu nav-menu" style="font-size: 30px;" aria-hidden="true"></span> Sistema
+            </NavLink>
+        </div>
     </nav>
 </div>
 
