Cambio del orden del porcentaje en complejidad.

--- a/Registro/Components/Pages/SistemaPages/Index.razor
+++ b/Registro/Components/Pages/SistemaPages/Index.razor
@@ -63,7 +63,7 @@
 					<tr>
 						<td>@ciudad.SistemaId</td>
 						<td>@ciudad.Descripcion</td>
-						<td>%@ciudad.Complejidad.ToString("N2")</td>
+							<td>@ciudad.Complejidad.ToString("N2")%</td>
 						<td><a href="/Sistema/Editar/@ciudad.SistemaId" class="bi bi-pencil-square btn btn-outline-warning"></a></td>
 						<td><a href="/Sistema/Eliminar/@ciudad.SistemaId" class="bi bi-trash btn btn-outline-danger"></a></td>
 					</tr>
